Test URL instead of VirtualURL in [BVC isTabNativePage]

The "native" character is linked to the loaded URL and not to the
displayed URL. Test the URL instead of the VirtualURL.

BUG=696628

Review-Url: https://codereview.chromium.org/2723683002
Cr-Commit-Position: refs/heads/master@{#453933}

Former-commit-id: 889af53fad72676272dd249f039a12aec8845f8c